<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout"
    tools:context=".MainActivity">

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:background="@mipmap/ic_launcher1"
            android:layout_margin="@dimen/_10sdp"/>

        <!-- TITLE FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:layout_margin="@dimen/_5sdp"/>

        <!-- DESCRIPTION FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13ssp"
            android:text="@string/main_activity_description"
            android:layout_margin="@dimen/_5sdp"/>
    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp">

        <!-- BUTTON LOGIN -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/_13ssp"
            android:background="@drawable/button_radius_primary_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:onClick="onClickLoginButton"/>

        <!-- BUTTON CHAT -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chat_with_mentor"
            android:textColor="#fff"
            android:textSize="@dimen/_13ssp"
            android:background="@drawable/button_radius_accent_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:onClick="onClickChatButton"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>