<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MentorChatActivity">

    <!-- BUTTONS CHAT CONTAINER -->
    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- BUTTON CHAT ANDROID -->
        <ImageButton
            android:id="@+id/android_chat_button"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:src="@drawable/ic_android_white_24dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:tag="10"
            android:onClick="onClickChatButtons"/>

        <!-- BUTTON CHAT FIREBASE -->
        <ImageButton
            android:id="@+id/firebase_chat_button"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/colorSandLight"
            android:src="@drawable/ic_cloud_white_24dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:tag="20"
            android:onClick="onClickChatButtons"/>

        <!-- BUTTON CHAT BUG -->
        <ImageButton
            android:id="@+id/bug_chat_button"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="@color/colorSand"
            android:src="@drawable/ic_bug_report_white_24dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:tag="30"
            android:onClick="onClickChatButtons"/>
    </LinearLayout>

    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/add_message_container"
        android:layout_below="@id/buttons_container">

        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/text_view_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_mentor_chat_error"
            android:textAlignment="center"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center_horizontal" />
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <!-- IMAGE CHOSEN PREVIEW -->
    <ImageView
        android:id="@+id/img_chosen_preview"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_margin="@dimen/_5sdp"
        android:layout_above="@id/add_message_container"/>

    <!-- ADD MESSAGE CONTAINER -->
    <LinearLayout
        android:id="@+id/add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal">

        <!-- ADD FILE BUTTON -->
        <ImageButton
            android:id="@+id/add_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_add_circle_black_24px"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onClickAddFile"/>
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="@dimen/_10ssp"
            android:hint="@string/text_input_title_mentor_chat_activity"/>

        <!-- ADD MESSAGE BUTTON -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_title_mentor_chat_activity"
            android:textColor="@color/colorAccent"
            android:onClick="onClickSendMessage"/>

    </LinearLayout>

</RelativeLayout>